# remote_app

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  PROJECT_STATUS.md  QUICK_REF.md  README.md  SUMMARY.md  note.txt
config/: agent.toml  server.toml
crates/rd-agent/: Cargo.toml
crates/rd-agent/src/: capture_loop.rs  config.rs  input_handler.rs  main.rs
crates/rd-cli/: Cargo.toml
crates/rd-cli/src/: main.rs
crates/rd-cli/src/commands/: mod.rs
crates/rd-client/: Cargo.toml
crates/rd-client/src/: lib.rs  session.rs
crates/rd-codec/: Cargo.toml
crates/rd-codec/src/: jpeg.rs  lib.rs
crates/rd-core/: Cargo.toml
crates/rd-core/src/: lib.rs
crates/rd-core/src/application/: mod.rs  session_manager.rs  stream_controller.rs
crates/rd-core/src/domain/: error.rs  mod.rs  models.rs  ports.rs
crates/rd-platform/: Cargo.toml
crates/rd-platform/src/: lib.rs
crates/rd-platform/src/input_injection/: linux.rs  macos.rs  mod.rs  windows.rs
crates/rd-platform/src/screen_capture/: linux.rs  macos.rs  mod.rs  windows.rs
crates/rd-server/: Cargo.toml
crates/rd-server/src/: config.rs  main.rs  state.rs
crates/rd-server/src/handlers/: mod.rs
crates/rd-signaling/: Cargo.toml
crates/rd-signaling/src/: main.rs
crates/rd-transport/: Cargo.toml
crates/rd-transport/src/: lib.rs
crates/rd-transport/src/protocol/: mod.rs
crates/rd-transport/src/quic/: client.rs  mod.rs  server.rs  transport.rs
crates/rd-transport/src/webrtc/: mod.rs  signaling.rs  transport.rs
docs/: architecture.md  development.md  protocol.md
rd-desktop/: package.json  tailwind.config.ts
rd-desktop/src/: App.css  App.tsx  index.css
rd-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rd-desktop/src-tauri/src/: lib.rs  main.rs
scripts/: build-all.sh  dev-agent.sh  dev-server.sh  quick-dev.sh  setup.sh
