[workspace]
resolver = "2"
members = [
    "crates/rd-core",
    "crates/rd-codec",
    "crates/rd-transport",
    "crates/rd-platform",
    "crates/rd-server",
    "crates/rd-agent",
    "crates/rd-client",
    "crates/rd-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Remote Desktop Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/remote-desktop"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Network
quinn = "0.11"
rustls = "0.23"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.7"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Crypto & Auth
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = "0.25"

# Utilities
hostname = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# TLS certificate generation
rcgen = "0.13"

# Platform-specific dependencies
[workspace.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
]

[workspace.dependencies.x11rb]
version = "0.13"
features = ["allow-unsafe-code"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
