[package]
name = "rd-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rd-core = { path = "../rd-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Image processing
image = { workspace = true }

# Logging
tracing = { workspace = true }
