[package]
name = "rd-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rd-core = { path = "../rd-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# QUIC
quinn = { workspace = true }
rustls = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
tokio-util = { workspace = true }

# TLS certificate generation (development)
rcgen = "0.13"
