[package]
name = "rd-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rd-core = { path = "../rd-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# QUIC
quinn = { workspace = true }
rustls = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
tokio-util = { workspace = true }

# TLS certificate generation (development)
rcgen = "0.13"

# WebRTC P2P
webrtc = "0.11"
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"
