[package]
name = "rd-desktop"
version = "0.1.0"
description = "Remote Desktop - Tauri Desktop Client"
authors = ["bachtv"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rd_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Remote Desktop Client
rd-client = { path = "../../crates/rd-client" }
rd-core = { path = "../../crates/rd-core" }
rd-transport = { path = "../../crates/rd-transport" }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
rustls = "0.23"

